--- a/src/locale/en/locale.cfg
+++ b/src/locale/en/locale.cfg
@@ -9,18 +9,14 @@ inserter-fuel-leech-ticks-between-updates=Maximum ticks between updates
 
 inserter-fuel-leech-pickup-pos-variation=Maximum pickup distance variation
 
-inserter-fuel-leech-self-refuel-cheat-enabled=Use self-refuelling cheat
-
-inserter-fuel-leech-self-refuel-cheat-fuel=Self-refuelling cheat fuel
+inserter-fuel-leech-self-refuel-cheat-enabled=Use trickle-fuel cheat
 
 [mod-setting-description]
 
 inserter-fuel-leech-min-fuel-items=Inserters leech appropriate fuel items from pickup target's burner inventories until a drop target's burner inventory holds at least this amount of items.\nDefault is 5.
 
-inserter-fuel-leech-ticks-between-updates=Each tick, N / T inserters get updated where N is the count of placed inserters in the game and T is the value of this setting. If N < T, one inserter gets checked every tick. If increasing this, you might also want to increase "Maximum pickup distance variation" and/or enable "Use self-refuelling cheat" and increase "Self-refuelling cheat fuel".\nThe value is a tradeoff between impact on UPS for big amounts of inserters and reliability of detection of an inserter's hand hovering above its pickup target. Too high values lead to starved burner inserters and their drop targets. Too low values will kill UPS if lots of inserters are managed.\nDefault is 90 (1.5 seconds at normal game speed with full UPS).
+inserter-fuel-leech-ticks-between-updates=Each tick, N / T inserters get updated where N is the count of placed inserters in the game and T is the value of this setting. If N < T, one inserter gets checked every tick. If increasing this, you might also want to increase "Maximum pickup distance variation".\nThe value is a tradeoff between impact on UPS for big amounts of inserters and reliability of detection of an inserter's hand hovering above its pickup target. Too high values lead to starved drop targets. Too low values will kill UPS if lots of inserters are managed.\nDefault is 90 (1.5 seconds at normal game speed with full UPS).
 
 inserter-fuel-leech-pickup-pos-variation=Maximum distance (measured in tiles) between the hand of an inserter and its pickup location to consider it hovering over its pickup target. Keep this small to prevent visible teleporting of items.\nSet this to 10.0 to get BurnerLeech's teleport-to-hand behaviour.\nDefault is 0.3.
 
-inserter-fuel-leech-self-refuel-cheat-enabled=Teleports fuel from pickup target's burner inventory into the burner inventory of the inserter if empty and less than "Self-refuelling cheat fuel" joules of fuel left.\nEnabled by default to work around hard-wired behaviour leading to inserters ignoring their own needs when burner-based pickup targets contain non-fuel items waiting to be transported.\nIf "Maximum ticks between updates" is small enough and "Maximum pickup distance variation" is high enough, the cheat will not get triggered because hand's arrival at the pickup target will be detected more reliably.\n
-
-inserter-fuel-leech-self-refuel-cheat-fuel=Maximum amount of fuel (measured in joules) left in an inserter's burner to trigger the self refuelling cheat if the burner inventory is empty. Default is 1MJ (one eighth of a vanilla coal item of 8MJ).\nIf decreasing this, you might want to decrease "Maximum ticks between updates" and/or increase "Maximum pickup distance variation".
+inserter-fuel-leech-self-refuel-cheat-enabled=Every once in a while, out-of-fuel burner inserters get a minuscule amount of free fuel. This allows them to grab more fuel from their pickup location and get themselves properly fueled.\n
