--- a/src/locale/en/locale.cfg
+++ b/src/locale/en/locale.cfg
@@ -8,6 +8,7 @@ inserter-fuel-leech-discover-per-tick=Inserters to (re)discover every tick
 inserter-fuel-leech-discover-empty-chunks-per-tick=Empty chunks to skip every tick
 inserter-fuel-leech-self-leech-from-drop-enabled=Enable leech for self from drop
 inserter-fuel-leech-self-refuel-cheat-enabled=Enable backup self-refuel cheat
+inserter-fuel-leech-target-item-count-min=Minimum target item count
 inserter-fuel-leech-pickup-margin-ticks=Pickup distance margin [ticks]
 
 inserter-fuel-leech-no-use-for-fuel-seconds-to-wait=Delay when not using fuel [s]
@@ -28,6 +29,7 @@ inserter-fuel-leech-discover-per-tick=(Re)Discovers this many inserters already 
 inserter-fuel-leech-discover-empty-chunks-per-tick=Maximally skip this many empty chunks per tick when (re)discovering inserters.\nThis is mostly a debug setting. The default should be fine on any system.
 inserter-fuel-leech-self-leech-from-drop-enabled=If a burner inserter needs fuel, it might take it from its drop target in addition to taking it from the pickup target.
 inserter-fuel-leech-self-refuel-cheat-enabled=If a burner inserter gets stuck out of fuel and it has fuel in its hand or its pickup target or drop target has fuel, one item of that fuel is teleported into the inserters fuel inventory.
+inserter-fuel-leech-target-item-count-min=The amount of items to maintain in the target inventory. Vanilla inserter behavior is to insert 5 fuel items into non-vehicle fuel inventories.
 inserter-fuel-leech-pickup-margin-ticks=Inserters will teleport fuel items into their hand up to this amount of ticks early from their pickup target or late from their drop target. If this is too low, the inserter may already have picked up another item or miss the opportunity to leech from a drop target when timing estimates are off.
 
 inserter-fuel-leech-no-use-for-fuel-seconds-to-wait=Seconds to wait before next update when the inserter or its target don't use fuel items.\nThis also is the reaction delay for changing the inserter drop target.\nIncrease this first when experiencing UPS lag.
